==> sh-lyf/XenD101_HPS/Middleware/platform/stm32/src/stm32_spi.c <==
#include "stm32_spi.h"
#include "utilities.h"
#include "dataprocess.h"
#include "rtos.h"

void HAL_SPI_MspInit(SPI_HandleTypeDef* spiHandle)
{

    GPIO_InitTypeDef GPIO_InitStruct = {0};
    if(spiHandle->Instance==SPI1)
    {
        __HAL_RCC_SPI1_CLK_ENABLE();
        __HAL_RCC_GPIOA_CLK_ENABLE();
        /**SPI1 GPIO Configuration    
        PA4     ------> SPI1_NSS
        PA5     ------> SPI1_SCK
        PA6     ------> SPI1_MISO
        PA7     ------> SPI1_MOSI 
        */
        GPIO_InitStruct.Pin = GPIO_PIN_4|GPIO_PIN_5|GPIO_PIN_6|GPIO_PIN_7;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF5_SPI1;
        HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);

        __HAL_RCC_DMA2_CLK_ENABLE();
        hdma_spi1_rx.Instance = DMA2_Stream0;
#if defined(STM32F429xx)
        hdma_spi1_rx.Init.Channel = DMA_CHANNEL_3;
#elif defined(STM32H750xx)
        hdma_spi1_rx.Init.Request = DMA_REQUEST_SPI1_RX;
#endif
        hdma_spi1_rx.Init.Direction = DMA_PERIPH_TO_MEMORY;
        hdma_spi1_rx.Init.PeriphInc = DMA_PINC_DISABLE;
        hdma_spi1_rx.Init.MemInc = DMA_MINC_ENABLE;
        hdma_spi1_rx.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
        hdma_spi1_rx.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
        hdma_spi1_rx.Init.Mode = DMA_CIRCULAR;
        hdma_spi1_rx.Init.Priority = DMA_PRIORITY_HIGH;
        hdma_spi1_rx.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
        if (HAL_DMA_Init(&hdma_spi1_rx) != HAL_OK)
        {
            RunFailed((uint8_t *)__FILE__, __LINE__);
        }

        __HAL_LINKDMA(spiHandle,hdmarx,hdma_spi1_rx);
        HAL_NVIC_SetPriority(DMA2_Stream0_IRQn, 5, 0);
        HAL_NVIC_EnableIRQ(DMA2_Stream0_IRQn);
    }
    else if(spiHandle->Instance==SPI4)
    {
        __HAL_RCC_SPI4_CLK_ENABLE();
        __HAL_RCC_GPIOE_CLK_ENABLE();
        /**SPI4 GPIO Configuration    
        PE11     ------> SPI4_NSS
        PE12     ------> SPI4_SCK
        PE13     ------> SPI4_MISO
        PE14     ------> SPI4_MOSI 
        */
        GPIO_InitStruct.Pin = GPIO_PIN_11|GPIO_PIN_12|GPIO_PIN_13|GPIO_PIN_14;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF5_SPI4;
        HAL_GPIO_Init(GPIOE, &GPIO_InitStruct);

        __HAL_RCC_DMA2_CLK_ENABLE();        
        hdma_spi4_rx.Instance = DMA2_Stream3;
#if defined(STM32F429xx)
        hdma_spi4_rx.Init.Channel = DMA_CHANNEL_5;
#elif defined(STM32H750xx)
        hdma_spi4_rx.Init.Request = DMA_REQUEST_SPI4_RX;
#endif
        hdma_spi4_rx.Init.Direction = DMA_PERIPH_TO_MEMORY;
        hdma_spi4_rx.Init.PeriphInc = DMA_PINC_DISABLE;
        hdma_spi4_rx.Init.MemInc = DMA_MINC_ENABLE;
        hdma_spi4_rx.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
        hdma_spi4_rx.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
        hdma_spi4_rx.Init.Mode = DMA_CIRCULAR;
        hdma_spi4_rx.Init.Priority = DMA_PRIORITY_HIGH;
        hdma_spi4_rx.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
        if (HAL_DMA_Init(&hdma_spi4_rx) != HAL_OK)
        {
            RunFailed((uint8_t *)__FILE__, __LINE__);
        }

        __HAL_LINKDMA(spiHandle,hdmarx,hdma_spi4_rx);
        HAL_NVIC_SetPriority(DMA2_Stream3_IRQn, 5, 0);
        HAL_NVIC_EnableIRQ(DMA2_Stream3_IRQn);
    }
#if defined(STM32H750xx)	
	else if(spiHandle->Instance==SPI2)
    {
        __HAL_RCC_SPI2_CLK_ENABLE();
        __HAL_RCC_GPIOB_CLK_ENABLE();
        /**SPI2 GPIO Configuration    
        PB12     ------> SPI2_NSS
        PB13     ------> SPI2_SCK
        PB14     ------> SPI2_MISO
        PB15     ------> SPI2_MOSI 
        */
        GPIO_InitStruct.Pin = GPIO_PIN_12|GPIO_PIN_13|GPIO_PIN_14|GPIO_PIN_15;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_NOPULL;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF5_SPI2;
        HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

        __HAL_RCC_DMA2_CLK_ENABLE();
        hdma_spi2_rx.Instance = DMA2_Stream1;
#if defined(STM32F429xx)
        hdma_spi2_rx.Init.Channel = DMA_CHANNEL_3;
#elif defined(STM32H750xx)
        hdma_spi2_rx.Init.Request = DMA_REQUEST_SPI2_RX;
#endif
        hdma_spi2_rx.Init.Direction = DMA_PERIPH_TO_MEMORY;
        hdma_spi2_rx.Init.PeriphInc = DMA_PINC_DISABLE;
        hdma_spi2_rx.Init.MemInc = DMA_MINC_ENABLE;
        hdma_spi2_rx.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
        hdma_spi2_rx.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
        hdma_spi2_rx.Init.Mode = DMA_CIRCULAR;
        hdma_spi2_rx.Init.Priority = DMA_PRIORITY_HIGH;
        hdma_spi2_rx.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
        if (HAL_DMA_Init(&hdma_spi2_rx) != HAL_OK)
        {
            RunFailed((uint8_t *)__FILE__, __LINE__);
        }

        __HAL_LINKDMA(spiHandle,hdmarx,hdma_spi2_rx);
        HAL_NVIC_SetPriority(DMA2_Stream1_IRQn, 5, 0);
        HAL_NVIC_EnableIRQ(DMA2_Stream1_IRQn);
    }
	else if(spiHandle->Instance==SPI6)
    {
        __HAL_RCC_SPI6_CLK_ENABLE();
		__HAL_RCC_GPIOA_CLK_ENABLE();
        __HAL_RCC_GPIOB_CLK_ENABLE();
        /**SPI1 GPIO Configuration    
        PA15     ------> SPI6_NSS
        PB3     ------> SPI6_SCK
        PB4     ------> SPI6_MISO
        PB5     ------> SPI6_MOSI 
        */
        GPIO_InitStruct.Pin = GPIO_PIN_15;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_PULLUP;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF7_SPI6;
        HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);
		
		GPIO_InitStruct.Pin = GPIO_PIN_3|GPIO_PIN_4|GPIO_PIN_5;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
        GPIO_InitStruct.Pull = GPIO_PULLUP;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF8_SPI6;
        HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

        __HAL_RCC_BDMA_CLK_ENABLE();
        hdma_spi6_rx.Instance = BDMA_Channel0;
#if defined(STM32F429xx)
        hdma_spi6_rx.Init.Channel = DMA_CHANNEL_3;
#elif defined(STM32H750xx)
        hdma_spi6_rx.Init.Request = BDMA_REQUEST_SPI6_RX;
#endif
        hdma_spi6_rx.Init.Direction = DMA_PERIPH_TO_MEMORY;
        hdma_spi6_rx.Init.PeriphInc = DMA_PINC_DISABLE;
        hdma_spi6_rx.Init.MemInc = DMA_MINC_ENABLE;
        hdma_spi6_rx.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
        hdma_spi6_rx.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
        hdma_spi6_rx.Init.Mode = DMA_CIRCULAR;
        hdma_spi6_rx.Init.Priority = DMA_PRIORITY_HIGH;
        hdma_spi6_rx.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
		hdma_spi6_rx.Init.FIFOThreshold = DMA_FIFO_THRESHOLD_FULL;
		hdma_spi6_rx.Init.MemBurst = DMA_MBURST_SINGLE;       
		hdma_spi6_rx.Init.PeriphBurst = DMA_PBURST_SINGLE;  
        if (HAL_DMA_Init(&hdma_spi6_rx) != HAL_OK)
        {
            RunFailed((uint8_t *)__FILE__, __LINE__);
        }

        __HAL_LINKDMA(spiHandle,hdmarx,hdma_spi6_rx);
        HAL_NVIC_SetPriority(BDMA_Channel0_IRQn, 5, 0);
        HAL_NVIC_EnableIRQ(BDMA_Channel0_IRQn);        
    }
#endif
}

void HAL_SPI_MspDeInit(SPI_HandleTypeDef* spiHandle)
{
    if(spiHandle->Instance==SPI1)
    {
        __HAL_RCC_SPI1_CLK_DISABLE();
        HAL_GPIO_DeInit(GPIOA, GPIO_PIN_4|GPIO_PIN_5|GPIO_PIN_6|GPIO_PIN_7);
        if (HAL_DMA_DeInit(spiHandle->hdmarx) != HAL_OK)
        {
            RunFailed((uint8_t *)__FILE__, __LINE__);
        }
    }
	else if(spiHandle->Instance==SPI2)
    {
        __HAL_RCC_SPI2_CLK_DISABLE();
        HAL_GPIO_DeInit(GPIOB, GPIO_PIN_12|GPIO_PIN_13|GPIO_PIN_14|GPIO_PIN_15);
        if (HAL_DMA_DeInit(spiHandle->hdmarx) != HAL_OK)
        {
            RunFailed((uint8_t *)__FILE__, __LINE__);
        }
    }
    else if(spiHandle->Instance==SPI4)
    {
        __HAL_RCC_SPI4_CLK_DISABLE();
        HAL_GPIO_DeInit(GPIOE, GPIO_PIN_11|GPIO_PIN_12|GPIO_PIN_13|GPIO_PIN_14);
        if (HAL_DMA_DeInit(spiHandle->hdmarx) != HAL_OK)
        {

            RunFailed((uint8_t *)__FILE__, __LINE__);
        }
    }
	else if(spiHandle->Instance==SPI6)
    {
        __HAL_RCC_SPI6_CLK_DISABLE();
        HAL_GPIO_DeInit(GPIOA, GPIO_PIN_15);
		HAL_GPIO_DeInit(GPIOB, GPIO_PIN_3|GPIO_PIN_4|GPIO_PIN_5);
        if (HAL_DMA_DeInit(spiHandle->hdmarx) != HAL_OK)
        {
            RunFailed((uint8_t *)__FILE__, __LINE__);
        }
    }
}

void SPI_Init(uint16_t dmaBufLen)
{ 
#ifndef SUPPORT_TSPI_IO
    SPI1_Init(); /*LNA1-TSPI_DA1*/
#endif
    SPI4_Init(); /*LNA2-TSPI_DA0*/	
#if defined(STM32H750xx)   
	SPI2_Init();
	SPI6_Init();	
#endif	
    curSpiFrameLen = dmaBufLen >> 1;
    SPI_DMA_Enable(curSpiFrameLen);
}
